--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-    {{body}}
+    <p>hola</p>
+
+    {{{body}}}
    
 </body>
 </html>
