--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,112 @@
-<h1>hola mundo</h1>
+<div class="row">
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">buy</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<nav aria-label="Page navigation example">
+    <ul class="justify-content-center pagination">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+</nav>
