--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,18 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
+            </div>
+            <div class="card-footer text-muted"></div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="card mb-3">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h4 class="card-title">Producto N°</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -15,7 +26,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -25,7 +36,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -35,7 +46,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -45,7 +56,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -55,7 +66,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -65,7 +76,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -75,7 +86,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
@@ -85,17 +96,7 @@
             <div class="card-body">
                 <h4 class="card-title">Producto N°</h4>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">buy</a>
+                <a href="#" class="btn btn-primary">Buy $19</a>
             </div>
         </div>
     </div>
