--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer id="footer" class="bg-dark text-light">
+<footer id="footer" class="text-light bg-dark">
     <div class="px-3 py-2 container d-flex justify-content-between">
         &copy; Minterger
         <a class="btn btn-dark btn-sm" href="#">Ir Arriba <i class='bx bxs-arrow-to-top'></i></a>
