--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,9 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- boxicons -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <!-- styles -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     {{>navigation}}
+
+    {{!--<div class="container-fluid img-background d-flex justify-content-center align-items-center">
+        <div>
+            <h3 class="text-light">Tienda de algo</h3>
+            <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, consectetur?</p>
+        </div>
+    </div>--}}
 
     <main class="container p-5">
         {{{body}}}
