create product and renderize

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,105 +1,17 @@
 <div class="row">
+    {{#each products}}
     <div class="col-md-3">
         <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
+            <img src="{{img_link}}" class="card-img-top" alt="...">
             <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
+                <h4 class="card-title">{{product_name}}</h4>
+                <p>{{description}}</p>
+                <a href="#" class="btn btn-primary">Buy ${{price}}</a>
             </div>
             <div class="card-footer text-muted"></div>
         </div>
     </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card mb-3">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2F_LbbKKuimaM%2Fmaxresdefault.jpg&f=1&nofb=1" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h4 class="card-title">Producto N°</h4>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn btn-primary">Buy $19</a>
-            </div>
-        </div>
-    </div>
+    {{/each}}
 </div>
 
 <nav aria-label="Page navigation example">
