--- a/src/views/products/edit-product.hbs
+++ b/src/views/products/edit-product.hbs
@@ -6,7 +6,7 @@
         <form action="/edit-product" method="POST">
             <div class="mb-3">
                 <label for="product-name" class="form-label">Product Name</label>
-                <input type="text" name="prduct" class="form-control" id="product-name" required>
+                <input type="text" name="product_name" class="form-control" id="product-name" required>
             </div>
             <div class="mb-3">
                 <label for="link-image" class="form-label">Link of Image</label>
