--- a/src/views/products/edit-product.hbs
+++ b/src/views/products/edit-product.hbs
@@ -3,27 +3,28 @@
         <h4>Edit Product</h4>
     </div>
     <div class="card-body">
-        <form action="/edit-product" method="POST">
+        <form action="/edit-product/{{product._id}}?_method=put" method="POST">
+            <input type="hidden" name="_method" value="put">
             <div class="mb-3">
                 <label for="product-name" class="form-label">Product Name</label>
-                <input type="text" name="product_name" class="form-control" id="product-name" required>
+                <input type="text" name="product_name" class="form-control" value="{{product.product_name}}" id="product-name" required>
             </div>
             <div class="mb-3">
                 <label for="link-image" class="form-label">Link of Image</label>
-                <input type="text" name="img_link" class="form-control" id="link-image" required>
+                <input type="text" name="img_link" class="form-control" value="{{product.img_link}}" id="link-image" required>
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
-                <textarea class="form-control" name="description" id="description" rows="4" required></textarea>
+                <textarea class="form-control" name="description" id="description" rows="4" required>{{product.description}}</textarea>
             </div>
             <div class="row">
                 <label for="price" class="col-sm-1 col-form-label">Price</label>
                 <div class="col-sm-11">
-                    <input type="text" name="price" id="price" class="form-control" required>
+                    <input type="text" name="price" id="price" value="{{product.price}}" class="form-control" required>
                 </div>
             </div>
             <div class="d-grid gap-2 mt-3">
-                <button type="submit" class="btn btn-primary btn-block">Create Product</button>
+                <button type="submit" class="btn btn-primary btn-block">Edit Product</button>
             </div>
         </form>
     </div>
