--- a/src/views/products/edit-product.hbs
+++ b/src/views/products/edit-product.hbs
@@ -17,9 +17,19 @@
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" name="description" id="description" rows="4" required>{{product.description}}</textarea>
             </div>
+            <div class="row mb-3">
+                <label for="select" class="col-sm-2 col-form-label">Category</label>
+                <div class="col-sm-10">
+                    <select class="form-select form-select-sm" id="select" name="category" aria-label=".form-select-sm example">
+                        {{#each category}}
+                        <option value="{{category}}">{{categoryName}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+            </div>
             <div class="row">
-                <label for="price" class="col-sm-1 col-form-label">Price</label>
-                <div class="col-sm-11">
+                <label for="price" class="col-sm-2 col-form-label">Price</label>
+                <div class="col-sm-10">
                     <input type="text" name="price" id="price" value="{{product.price}}" class="form-control" required>
                 </div>
             </div>
