--- a/src/views/products/new-product.hbs
+++ b/src/views/products/new-product.hbs
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
     <div class="card-header d-flex justify-content-center">
         <h4>New Product</h4>
     </div>
@@ -16,14 +16,44 @@
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" name="description" id="description" rows="4" required></textarea>
             </div>
+            <div class="row mb-3">
+                <label for="select" class="col-sm-2 col-form-label">Category</label>
+                <div class="col-sm-10">
+                    <select class="form-select form-select-sm" id="select" name="category" aria-label=".form-select-sm example">
+                        {{#each category}}
+                        <option value="{{category}}">{{categoryName}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+            </div>
             <div class="row">
-                <label for="price" class="col-sm-1 col-form-label">Price</label>
-                <div class="col-sm-11">
+                <label for="price" class="col-sm-2 col-form-label">Price</label>
+                <div class="col-sm-10">
                     <input type="text" name="price" id="price" class="form-control" required>
                 </div>
             </div>
             <div class="d-grid gap-2 mt-3">
                 <button type="submit" class="btn btn-primary btn-block">Create Product</button>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="card">
+    <div class="card-header d-flex justify-content-center">
+        <h4>Add Category</h4>
+    </div>
+    <div class="card-body">
+        <form action="/add-category" method="POST">
+            <div class="mb-3">
+                <label for="product-name" class="form-label">Category Name</label>
+                <input type="text" name="categoryName" class="form-control" id="product-name" required>
+            </div>
+            <div class="mb-3">
+                <label for="link-image" class="form-label">Link of Image For Category</label>
+                <input type="text" name="img_category" class="form-control" id="link-image" required>
+            </div>
+            <div class="d-grid gap-2 mt-3">
+                <button type="submit" class="btn btn-primary btn-block">Add Category</button>
             </div>
         </form>
     </div>
