--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -6,7 +6,7 @@
             <div class="card-body">
                     <h4 class="card-title d-flex justify-content-center mb-3">{{categoryName}}</h4>
                     <div class="d-grid gap-2">
-                        <a href="/{{category}}" class="btn btn-primary">ver</a>
+                        <a href="/product/{{category}}" class="btn btn-primary">Watch</a>
                     </div>
             </div>
         </div>
