--- a/src/views/products/new-product.hbs
+++ b/src/views/products/new-product.hbs
@@ -19,7 +19,8 @@
             <div class="row mb-3">
                 <label for="select" class="col-sm-2 col-form-label">Category</label>
                 <div class="col-sm-10">
-                    <select class="form-select form-select-sm" id="select" name="category" aria-label=".form-select-sm example">
+                    <select class="form-select form-select-sm" id="select" name="category" aria-label=".form-select-sm example" required>
+                        <option value="" disabled selected>Select..</option>
                         {{#each category}}
                         <option value="{{category}}">{{categoryName}}</option>
                         {{/each}}
