--- a/src/views/category/edit-category.hbs
+++ b/src/views/category/edit-category.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid py-5">
+<div class="py-5">
     <div class="card my-5">
         <div class="card-header d-flex justify-content-center">
             <h4>Edit Category</h4>
