--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,6 +12,9 @@
         <li class="nav-item ">
           <a class="nav-link" href="#">Features</a>
         </li>
+        <li class="nav-item ">
+          <a class="nav-link disable" href="#"></a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Add
@@ -20,6 +23,9 @@
             <li><a class="dropdown-item" href="/new-product">Product</a></li>
             <li><a class="dropdown-item" href="/add-category">Category</a></li>
           </ul>
+        </li>
+        <li class="nav-item">
+          <a href="/logout" class="nav-link">Logout</a>
         </li>
       </li>
       </ul>
