--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -24,8 +24,15 @@
             <li><a class="dropdown-item" href="/add-category">Category</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a href="/logout" class="nav-link">Logout</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            User
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/new-user">Register User</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+          </ul>
         </li>
       </li>
       </ul>
