--- a/src/views/users/register.hbs
+++ b/src/views/users/register.hbs
@@ -5,7 +5,7 @@
                 <h4>Register</h4>
             </div>
             <div class="card-body">
-                <form action="/register" method="POST">
+                <form action="/new-user" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" name="name" class="form-control" id="name" aria-describedby="name" value="{{name}}" required>
