--- a/src/views/users/login.hbs
+++ b/src/views/users/login.hbs
@@ -1,6 +1,6 @@
 <div class="row my-5 py-5">
     <div class="col-md-5 mx-auto">
-        <div class="card">
+        <div class="card text-white bg-dark">
             <div class="card-header text-center">
                 <h4>Login</h4>
             </div>
@@ -15,7 +15,7 @@
                         <input type="password" name="password" class="form-control" id="password" required>
                     </div>
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Login</button>
                     </div>
                 </form>
             </div>
