--- a/src/views/users/register.hbs
+++ b/src/views/users/register.hbs
@@ -1,6 +1,6 @@
 <div class="row my-2">
     <div class="col-md-5 mx-auto">
-        <div class="card">
+        <div class="card text-white bg-dark">
             <div class="card-header text-center">
                 <h4>Register</h4>
             </div>
@@ -23,7 +23,7 @@
                         <input type="password" name="confirmPassword" class="form-control" id="confirmPassword" required>
                     </div>
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Register</button>
                     </div>
                 </form>
             </div>
