login and protect routes logic

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,6 +12,7 @@
         <li class="nav-item ">
           <a class="nav-link" href="#">Features</a>
         </li>
+        {{#if user}}
         <li class="nav-item ">
           <a class="nav-link disable" href="#"></a>
         </li>
@@ -35,6 +36,7 @@
           </ul>
         </li>
       </li>
+      {{/if}}
       </ul>
     </div>
   </div>
