--- a/src/views/products/new-product.hbs
+++ b/src/views/products/new-product.hbs
@@ -9,6 +9,10 @@
                 <input type="text" name="product_name" class="form-control" id="product-name" required>
             </div>
             <div class="mb-3">
+                <label for="link-image" class="form-label">Link of Product</label>
+                <input type="text" name="product_link" class="form-control" id="link-image" required>
+            </div>
+            <div class="mb-3">
                 <label for="link-image" class="form-label">Link of Image</label>
                 <input type="text" name="img_link" class="form-control" id="link-image" required>
             </div>
