--- a/src/views/users/register.hbs
+++ b/src/views/users/register.hbs
@@ -12,7 +12,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" value="{{email}}" required>
+                        <input type="email" name="userEmail" class="form-control" id="email" aria-describedby="emailHelp" value="{{userEmail}}" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
