--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,6 +9,7 @@
                         <a href="/{{category}}" class="btn btn-primary">View</a>
                     </div>
             </div>
+            {{#if ../user}}
             <div class="card-footer text-muted d-flex justify-content-between align-content-center">
                 <form action="/deleteCategory/{{_id}}?_method=delete" method="POST">
                     <input type="hidden" name="_method" value="delete">
@@ -16,6 +17,7 @@
                 </form>
                 <a class="btn btn-outline-success btn-sm" href="/edit-category/{{_id}}"><i class='bx bx-edit'></i></a>
             </div>
+            {{/if}}
         </div>
     </div>
     {{/each}}
