--- a/src/views/products/edit-product.hbs
+++ b/src/views/products/edit-product.hbs
@@ -10,6 +10,10 @@
                 <input type="text" name="product_name" class="form-control" value="{{product.product_name}}" id="product-name" required>
             </div>
             <div class="mb-3">
+                <label for="link-image" class="form-label">Link of Product</label>
+                <input type="text" name="product_link" class="form-control" value="{{product.product_link}}" id="link-image" required>
+            </div>
+            <div class="mb-3">
                 <label for="link-image" class="form-label">Link of Image</label>
                 <input type="text" name="img_link" class="form-control" value="{{product.img_link}}" id="link-image" required>
             </div>
