--- a/src/views/category/add-category.hbs
+++ b/src/views/category/add-category.hbs
@@ -7,11 +7,11 @@
             <form action="/add-category" method="POST">
                 <div class="mb-3">
                     <label for="product-name" class="form-label">Category Name</label>
-                    <input type="text" name="categoryName" class="form-control" id="product-name" required>
+                    <input type="text" name="categoryName" value="{{categoryName}}" class="form-control" id="product-name" required>
                 </div>
                 <div class="mb-3">
                     <label for="link-image" class="form-label">Link of Image For Category</label>
-                    <input type="text" name="img_category" class="form-control" id="link-image" required>
+                    <input type="text" name="img_category" value="{{img_category}}" class="form-control" id="link-image" required>
                 </div>
                 <div class="d-grid gap-2 mt-3">
                     <button type="submit" class="btn btn-primary btn-block">Add Category</button>
