--- a/src/views/category/edit-category.hbs
+++ b/src/views/category/edit-category.hbs
@@ -4,15 +4,15 @@
             <h4>Edit Category</h4>
         </div>
         <div class="card-body">
-            <form action="/edit-category/{{category._id}}?_method=put" method="POST">
+            <form action="/edit-category/{{_id}}?_method=put" method="POST">
                 <input type="hidden" name="_method" value="put">
                 <div class="mb-3">
                     <label for="product-name" class="form-label">Category Name</label>
-                    <input type="text" name="categoryName" value="{{category.categoryName}}" class="form-control" id="product-name" required>
+                    <input type="text" name="categoryName" value="{{categoryName}}" class="form-control" id="product-name" required>
                 </div>
                 <div class="mb-3">
                     <label for="link-image" class="form-label">Link of Image For Category</label>
-                    <input type="text" name="img_category" value="{{category.img_category}}" class="form-control" id="link-image" required>
+                    <input type="text" name="img_category" value="{{img_category}}" class="form-control" id="link-image" required>
                 </div>
                 <div class="d-grid gap-2 mt-3">
                     <button type="submit" class="btn btn-primary btn-block">Edit Category</button>
