--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -4,6 +4,12 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
+{{#if error_msg}}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  {{error_msg}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+</div>
+{{/if}}
 {{#each errors}}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
   {{text}}
