--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -27,7 +27,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            User
+            {{#each user}}{{name}}{{/each}}
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/new-user">Register User</a></li>
