--- a/src/views/products/get-products.hbs
+++ b/src/views/products/get-products.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    {{#each products}}
+    {{#each products.docs}}
     <div class="col-md-3">
         <div class="card mb-3">
             <img src="{{img_link}}" class="card-img-top" alt="...">
@@ -24,10 +24,25 @@
 
 <nav aria-label="Page navigation example">
     <ul class="justify-content-center pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        {{#if (pagination products.totalPages)}}
+            {{#if products.hasPrevPage}}
+            <li class="page-item"><a class="page-link" href="/{{#each products.docs}}{{category}}{{/each}}?page={{products.prevPage}}">Previous</a></li>
+            {{else}}
+            <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+            {{/if}}
+
+            {{!-- sin terminar --}}
+            {{!-- {{#each products.docs}}
+                {{#each (paginate ../products.totalPages ../products.page category)}}
+                {{{this}}}
+                {{/each}}
+            {{/each}} --}}
+            
+            {{#if products.hasNextPage}}
+            <li class="page-item"><a class="page-link" href="/{{#each products.docs}}{{category}}{{/each}}?page={{products.nextPage}}">Next</a></li>
+            {{else}}
+            <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+            {{/if}}
+        {{/if}}
     </ul>
 </nav>
