--- a/src/views/products/get-products.hbs
+++ b/src/views/products/get-products.hbs
@@ -26,20 +26,18 @@
     <ul class="justify-content-center pagination">
         {{#if (pagination products.totalPages)}}
             {{#if products.hasPrevPage}}
-            <li class="page-item"><a class="page-link" href="/{{#each products.docs}}{{category}}{{/each}}?page={{products.prevPage}}">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.prevPage}}">Previous</a></li>
             {{else}}
             <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
             {{/if}}
 
             {{!-- sin terminar --}}
-            {{!-- {{#each products.docs}}
-                {{#each (paginate ../products.totalPages ../products.page category)}}
-                {{{this}}}
-                {{/each}}
-            {{/each}} --}}
+            {{#each (paginate products.totalPages products.page products.docs)}}
+            {{{this}}}
+            {{/each}}
             
             {{#if products.hasNextPage}}
-            <li class="page-item"><a class="page-link" href="/{{#each products.docs}}{{category}}{{/each}}?page={{products.nextPage}}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.nextPage}}">Next</a></li>
             {{else}}
             <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
             {{/if}}
