--- a/src/views/products/get-products.hbs
+++ b/src/views/products/get-products.hbs
@@ -26,9 +26,9 @@
     <ul class="justify-content-center pagination">
         {{#if (pagination products.totalPages)}}
             {{#if products.hasPrevPage}}
-            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.prevPage}}">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.prevPage}}"><i class='bx bxs-chevron-left' ></i></a></li>
             {{else}}
-            <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+            <li class="page-item disabled"><a class="page-link" href=""><i class='bx bxs-chevron-left' ></i></a></li>
             {{/if}}
 
             {{!-- sin terminar --}}
@@ -37,9 +37,9 @@
             {{/each}}
             
             {{#if products.hasNextPage}}
-            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.nextPage}}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="/{{categories products.docs}}?page={{products.nextPage}}"><i class='bx bxs-chevron-right'></i></a></li>
             {{else}}
-            <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+            <li class="page-item disabled"><a class="page-link" href=""><i class='bx bxs-chevron-right'></i></a></li>
             {{/if}}
         {{/if}}
     </ul>
