--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-gradient" style="background-color: #DF1C44;">
+<nav class="navbar {{!-- sticky-top --}} navbar-expand-lg navbar-dark bg-gradient" style="background-color: #DF1C44;">
   <div class="container">
-    <a class="navbar-brand" href="/">Tienda</a>
+    <a class="navbar-brand" href="/">
+    <img src="/img/logo-shop.png" width="36" height="30" alt="">
+    Tienda
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +30,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            {{#each user}}{{name}}{{/each}}
+            {{username user}}
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="/new-user">Register User</a></li>
