--- a/src/views/users/login.hbs
+++ b/src/views/users/login.hbs
@@ -1,10 +1,11 @@
-<div class="row my-5 py-5">
+<div class="row my-5 {{!-- py-5 --}}">
     <div class="col-md-5 mx-auto">
         <div class="card text-white bg-dark">
             <div class="card-header text-center">
                 <h4>Login</h4>
             </div>
             <div class="card-body">
+                <img class="d-block mx-auto" height="150" src="/img/logo-shop.png" alt="">
                 <form action="/login" method="POST">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
