--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -13,7 +13,7 @@
           <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         {{#if user}}
         <li class="nav-item ">
